apps/ticket-app/overlays/prod/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: ticket-service
  namespace: ticketing
  annotations:
    alb.ingress.kubernetes.io/target-type: ip
spec:
  type: NodePort
