apps/ticket-app/overlays/prod/httproute-patch.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ticket-route
  namespace: ticketing
spec:
  hostnames:
    - team5.cloud-infra.shop
